[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_agaitskell"
version = "0.0.1"
authors = [
  { name="Andrew Gaitskell", email="andrew_gaitskell@brown.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dmto0l2022/dmtoolv1/tree/main/dmtool"
"Bug Tracker" = "https://github.com/dmto0l2022/dmtoolv1/dmtool/issues"
